# call-python-from-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: example_002.cpp  example_003.cpp  example_004.cpp  example_004.py
